style: move hero text down to avoid overlapping with floral top

--- a/style.css
+++ b/style.css
@@ -115,7 +115,7 @@ body {
     display: flex;
     flex-direction: column;
     align-items: center;
-    margin-top: 10vh; 
+    margin-top: 25vh; 
     width: 100%;
     padding: 0 20px;
 }
